--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: python
 python:
-  - "2.7"
+ - "2.7"
+ - "3.2"
+ - "3.3"
+ - "3.4"
+install:
+ - pip install -r requirements/tests.txt
 script:
  - python runtests.py
